codeanywhere_workspace/routes/temp/980288e828f51a1003d2/errors
/usercode/file.cpp: In function 'int main()':
/usercode/file.cpp:7:2: error: expected ';' before '}' token
  }
  ^
